// Vitest Snapshot v1

exports[`environment > when environment has custom prefix it is displayed > monochrome 1`] = `
"
PARAMETERS

  Name   Type/Description      Default      Environment (1)                         
  
  bar    string        REQUIRED    ✓          
  
  foo    string        REQUIRED    ✓ MOO_FOO                    
  
  NOTES
  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
  (1) Parameters can be passed arguments via environment variables. Command line a                    
      rguments take precedence. Environment variable names are snake cased version                    
      s of the parameter name (or its aliases), case insensitive. By default they                     
      must be prefixed with CLI_PARAMETER_ or CLI_PARAM_ (case insensitive), thoug                    
      h some parameters deviate (shown in docs). Examples:                                            
        → CLI_PARAMETER_BAR=\\"...\\"                                                                     
        → MOO_FOO=\\"...\\".                                                                              
"
`;

exports[`environment > when environment has custom prefix it is displayed > polychrome 1`] = `
"
PARAMETERS

  [4m[90mName[39m[24m   [4m[90mType/Description[39m[24m      [4m[90mDefault[39m[24m      [4m[90mEnvironment (1)[39m[24m                         
  
  [32mbar[39m    [32mstring[39m       [1m[30m[101m REQUIRED [49m[39m[22m   [34m✓[39m          
  
  [32mfoo[39m    [32mstring[39m       [1m[30m[101m REQUIRED [49m[39m[22m   [34m✓[39m [90mMOO_FOO[39m                    
  
[90m  NOTES[39m
[90m  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━[39m
[90m  (1) Parameters can be passed arguments via environment variables. Command line a                    [39m
[90m      rguments take precedence. Environment variable names are snake cased version                    [39m
[90m      s of the parameter name (or its aliases), case insensitive. By default they                     [39m
[90m      must be prefixed with [34mCLI_PARAMETER_[39m[90m or [34mCLI_PARAM_[39m[90m (case insensitive), thoug                    [39m
[90m      h some parameters deviate (shown in docs). Examples:                                            [39m
[90m        → [34mCLI_PARAMETER_[39m[90m[32mBAR[39m[90m=\\"...\\"                                                                     [39m
[90m        → [34mMOO_[39m[90m[32mFOO[39m[90m=\\"...\\".                                                                              [39m
"
`;

exports[`environment > when environment has no prefix it is displayed > monochrome 1`] = `
"
PARAMETERS

  Name   Type/Description      Default      Environment (1)                         
  
  bar    string        REQUIRED    ✓          
  
  foo    string        REQUIRED    ✓ FOO                    
  
  NOTES
  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
  (1) Parameters can be passed arguments via environment variables. Command line a             
      rguments take precedence. Environment variable names are snake cased version             
      s of the parameter name (or its aliases), case insensitive. They must be pre             
      fixed with CLI_PARAMETER_ or CLI_PARAM_ (case insensitive). Examples:                    
        → CLI_PARAMETER_BAR=\\"...\\"                                                              
        → FOO=\\"...\\".                                                                           
"
`;

exports[`environment > when environment has no prefix it is displayed > polychrome 1`] = `
"
PARAMETERS

  [4m[90mName[39m[24m   [4m[90mType/Description[39m[24m      [4m[90mDefault[39m[24m      [4m[90mEnvironment (1)[39m[24m                         
  
  [32mbar[39m    [32mstring[39m       [1m[30m[101m REQUIRED [49m[39m[22m   [34m✓[39m          
  
  [32mfoo[39m    [32mstring[39m       [1m[30m[101m REQUIRED [49m[39m[22m   [34m✓[39m [90mFOO[39m                    
  
[90m  NOTES[39m
[90m  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━[39m
[90m  (1) Parameters can be passed arguments via environment variables. Command line a             [39m
[90m      rguments take precedence. Environment variable names are snake cased version             [39m
[90m      s of the parameter name (or its aliases), case insensitive. They must be pre             [39m
[90m      fixed with [34mCLI_PARAMETER_[39m[90m or [34mCLI_PARAM_[39m[90m (case insensitive). Examples:                    [39m
[90m        → [34mCLI_PARAMETER_[39m[90m[32mBAR[39m[90m=\\"...\\"                                                              [39m
[90m        → [32mFOO[39m[90m=\\"...\\".                                                                           [39m
"
`;

exports[`environment > when environment is disabled for one parameter it has X indicating that > monochrome 1`] = `
"
PARAMETERS

  Name   Type/Description      Default      Environment (1)                         
  
  bar    string        REQUIRED    ✓          
  
  foo    string        REQUIRED    ✕          
  
  NOTES
  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
  (1) Parameters can be passed arguments via environment variables. Command line a             
      rguments take precedence. Environment variable names are snake cased version             
      s of the parameter name (or its aliases), case insensitive. They must be pre             
      fixed with CLI_PARAMETER_ or CLI_PARAM_ (case insensitive). Examples:                    
        → CLI_PARAMETER_BAR=\\"...\\".                                                             
"
`;

exports[`environment > when environment is disabled for one parameter it has X indicating that > polychrome 1`] = `
"
PARAMETERS

  [4m[90mName[39m[24m   [4m[90mType/Description[39m[24m      [4m[90mDefault[39m[24m      [4m[90mEnvironment (1)[39m[24m                         
  
  [32mbar[39m    [32mstring[39m       [1m[30m[101m REQUIRED [49m[39m[22m   [34m✓[39m          
  
  [32mfoo[39m    [32mstring[39m       [1m[30m[101m REQUIRED [49m[39m[22m   [90m✕[39m          
  
[90m  NOTES[39m
[90m  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━[39m
[90m  (1) Parameters can be passed arguments via environment variables. Command line a             [39m
[90m      rguments take precedence. Environment variable names are snake cased version             [39m
[90m      s of the parameter name (or its aliases), case insensitive. They must be pre             [39m
[90m      fixed with [34mCLI_PARAMETER_[39m[90m or [34mCLI_PARAM_[39m[90m (case insensitive). Examples:                    [39m
[90m        → [34mCLI_PARAMETER_[39m[90m[32mBAR[39m[90m=\\"...\\".                                                             [39m
"
`;

exports[`environment > when environment is disabled then environment doc is not shown > monochrome 1`] = `
"
PARAMETERS

  Name   Type/Description      Default   
  
  foo    string        REQUIRED 
  

"
`;

exports[`environment > when environment is disabled then environment doc is not shown > polychrome 1`] = `
"
PARAMETERS

  [4m[90mName[39m[24m   [4m[90mType/Description[39m[24m      [4m[90mDefault[39m[24m   
  
  [32mfoo[39m    [32mstring[39m       [1m[30m[101m REQUIRED [49m[39m[22m
  

"
`;

exports[`environment > when environment is enabled it shows as the last column > monochrome 1`] = `
"
PARAMETERS

  Name   Type/Description      Default      Environment (1)                         
  
  foo    string        REQUIRED    ✓          
  
  NOTES
  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
  (1) Parameters can be passed arguments via environment variables. Command line a             
      rguments take precedence. Environment variable names are snake cased version             
      s of the parameter name (or its aliases), case insensitive. They must be pre             
      fixed with CLI_PARAMETER_ or CLI_PARAM_ (case insensitive). Examples:                    
        → CLI_PARAMETER_FOO=\\"...\\".                                                             
"
`;

exports[`environment > when environment is enabled it shows as the last column > polychrome 1`] = `
"
PARAMETERS

  [4m[90mName[39m[24m   [4m[90mType/Description[39m[24m      [4m[90mDefault[39m[24m      [4m[90mEnvironment (1)[39m[24m                         
  
  [32mfoo[39m    [32mstring[39m       [1m[30m[101m REQUIRED [49m[39m[22m   [34m✓[39m          
  
[90m  NOTES[39m
[90m  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━[39m
[90m  (1) Parameters can be passed arguments via environment variables. Command line a             [39m
[90m      rguments take precedence. Environment variable names are snake cased version             [39m
[90m      s of the parameter name (or its aliases), case insensitive. They must be pre             [39m
[90m      fixed with [34mCLI_PARAMETER_[39m[90m or [34mCLI_PARAM_[39m[90m (case insensitive). Examples:                    [39m
[90m        → [34mCLI_PARAMETER_[39m[90m[32mFOO[39m[90m=\\"...\\".                                                             [39m
"
`;
